--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,8 +2,10 @@
 CHANGES
 =======
 
-3.6.0 (unreleased)
-------------------
+3.6.0dev (unreleased)
+---------------------
+
+- ...
 
 3.5.0 (2008-02-05)
 ------------------
