- Bug: The `gopherlib` module has been deprecated in Python 2.5. Whenever the   ZCML of this package was included when using Python 2.5, a deprecation   warning had been raised stating that `gopherlib` has been   deprecated. Provided a simple condition to check whether Python 2.5 or later   is installed by checking for the deleted `regex` module and thus optionally   load the security declaration for `gopherlib`.
This has finally annoyed me enough. :-)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,16 +2,23 @@
 CHANGES
 =======
 
-3.6.0dev (unreleased)
----------------------
+3.5.1 (2008-06-24)
+------------------
 
-- ...
+- Bug: The `gopherlib` module has been deprecated in Python 2.5. Whenever the
+  ZCML of this package was included when using Python 2.5, a deprecation
+  warning had been raised stating that `gopherlib` has been
+  deprecated. Provided a simple condition to check whether Python 2.5 or later
+  is installed by checking for the deleted `regex` module and thus optionally
+  load the security declaration for `gopherlib`.
 
 3.5.0 (2008-02-05)
 ------------------
 
-- zope.app.security.principalregistry.PrincipalRegistry.getPrincipal returns
-  zope.security.management.system_user when its id is used for the search key.
+- Feature:
+  `zope.app.security.principalregistry.PrincipalRegistry.getPrincipal` returns
+  `zope.security.management.system_user` when its id is used for the search
+  key.
 
 3.4.0 (2007-10-27)
 ------------------
