--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,14 @@
 CHANGES
 =======
 
-3.7.1 (unreleased)
+3.7.1 (2009-08-15)
 ------------------
 
-- ...
+- Changed globalmodules.zcml to avoid making declarations for
+  deprecated standard modules, to avoid deprecation warnings.
+
+  Note that globalmodules.zcml should be avoided.  It's better to make
+  declarations for only what you actually need to use.
 
 3.7.0 (2009-03-14)
 ------------------
