--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 3.7.4 (unreleased)
 ------------------
 
-- ...
+- Move 'zope.ManageApplication' permission to zope.app.applicationcontrol
 
 3.7.3 (2009-11-29)
 ------------------
