--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 3.7.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Removed use of 'zope.testing.doctestunit' in favor of stdlib's doctest.
 
 
 3.7.5 (2010-01-08)
